# gaussian-factorise

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  make.sh
include/gaussian_integer/: gaussian_integer.hpp
include/utility/: inputparser.hpp
src/: main.cpp
src/gaussian_integer/: gaussian_integer.cpp  gaussian_integer.cppm
src/utility/: inputparser.cpp  inputparser.cppm
